welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: object java.awt.Color is not a value
  setCouleurBrosse(Color)
                   ^MethodsPicture:49: error: too many arguments for method faireV: ()(c: java.awt.Color)Unit
  faireV(Color.GREEN)();
        ^MethodsPicture:51: error: too many arguments for method faireV: ()(c: java.awt.Color)Unit
  faireV(Color.Yellow)();
        ^MethodsPicture:53: error: too many arguments for method faireV: ()(c: java.awt.Color)Unit
  faireV(Color.RED)();
        ^MethodsPicture:55: error: too many arguments for method faireV: ()(c: java.awt.Color)Unit
  faireV(Color.BLUE)();
        ^